# engine_v2

./: .gitignore  Cargo.toml  README.md
benches/: node_update.rs
crates/: README.md
crates/gosub_css3/: Cargo.toml
crates/gosub_css3/src/: css3parser.rs  lib.rs  parser.rs  stylesheet.rs
crates/gosub_html5/: Cargo.toml
crates/gosub_html5/src/: document.rs  html5parser.rs  lib.rs  node.rs
crates/gosub_html5/src/document/: builder.rs  document.rs  document_events.rs  query.rs  query_processor.rs  task_queue.rs  tree_iterator.rs  walker.rs
crates/gosub_html5/src/document/query_processor/: processor.rs  query.rs
crates/gosub_html5/src/node/: arena.rs  builder.rs  node_data.rs  node_impl.rs
crates/gosub_html5/src/node/node_data/: comment.rs  doctype.rs  document.rs  element.rs  text.rs
crates/gosub_renderer/: Cargo.toml
crates/gosub_renderer/src/: backend.rs  layouter.rs  lib.rs  render_tree.rs  text_backend.rs  tree_drawer.rs
crates/gosub_renderer/src/backend/: README.md
crates/gosub_renderer/src/layouter/: basic_layouter.rs  layouter.rs
crates/gosub_renderer/src/render_tree/: render_tree.rs
crates/gosub_renderer/src/tree_drawer/: tree_drawer.rs
crates/gosub_shared/: Cargo.toml
crates/gosub_shared/src/: document.rs  lib.rs  location.rs  mock.rs  node_id.rs  traits.rs
crates/gosub_shared/src/traits/: css_system.rs  document.rs  html5_parser.rs  layouter.rs  module_conf.rs  node.rs  render_backend.rs  render_tree.rs  tree_drawer.rs
docs/: architecture.md  diag.md  request-flow.md  traits.md
src/: text-useragent.rs  useragent.rs
(+4 files in other folders)
